Cleans icons, updates layout, vectorizes menu icons

--- a/config/menus.yml
+++ b/config/menus.yml
@@ -164,16 +164,6 @@ menus:
         - "assets::show"
         - "assets::update"
     - tasks:
-      - - "bank_statements::index"
-        - "bank_statements::create"
-        - "bank_statements::destroy"
-        - "bank_statements::edit"
-        - "bank_statements::list"
-        - "bank_statements::list_lines"
-        - "bank_statements::new"
-        - "bank_statements::point"
-        - "bank_statements::show"
-        - "bank_statements::update"
       - - "accounts::reconciliation"
         - "accounts::list_reconciliation"
         - "accounts::mark"
@@ -185,31 +175,6 @@ menus:
       - - "journals::balance"
       - - "journals::general_ledger"
         - "journals::list_general_ledger"
-    - accounts:
-      - - "accounts::index"
-        - "accounts::create"
-        - "accounts::destroy"
-        - "accounts::edit"
-        - "accounts::list"
-        - "accounts::list_entities"
-        - "accounts::list_journal_entry_lines"
-        - "accounts::load"
-        - "accounts::new"
-        - "accounts::show"
-        - "accounts::update"
-    - financial_years:
-      - - "financial_years::index"
-        - "financial_years::close"
-        - "financial_years::compute_balances"
-        - "financial_years::create"
-        - "financial_years::destroy"
-        - "financial_years::edit"
-        - "financial_years::list"
-        - "financial_years::list_account_balances"
-        - "financial_years::new"
-        - "financial_years::show"
-        - "financial_years::synthesis" # NONEXISTENT ACTION !!!
-        - "financial_years::update"
     - cashes:
       - - "cashes::index"
         - "cashes::create"
@@ -221,7 +186,17 @@ menus:
         - "cashes::new"
         - "cashes::show"
         - "cashes::update"
-      - - "cash_transfers::index"
+        - "bank_statements::index"
+        - "bank_statements::create"
+        - "bank_statements::destroy"
+        - "bank_statements::edit"
+        - "bank_statements::list"
+        - "bank_statements::list_lines"
+        - "bank_statements::new"
+        - "bank_statements::point"
+        - "bank_statements::show"
+        - "bank_statements::update"
+        - "cash_transfers::index"
         - "cash_transfers::create"
         - "cash_transfers::destroy"
         - "cash_transfers::edit"
@@ -229,71 +204,6 @@ menus:
         - "cash_transfers::new"
         - "cash_transfers::show"
         - "cash_transfers::update"
-    - incoming_payments:
-      - - "incoming_payments::index"
-        - "incoming_payment_uses::create"
-        - "incoming_payment_uses::destroy"
-        - "incoming_payment_uses::new"
-        - "incoming_payments::create"
-        - "incoming_payments::destroy"
-        - "incoming_payments::edit"
-        - "incoming_payments::list"
-        - "incoming_payments::list_sales"
-        - "incoming_payments::new"
-        - "incoming_payments::show"
-        - "incoming_payments::update"
-      - - "deposits::index"
-        - "deposits::create"
-        - "deposits::destroy"
-        - "deposits::edit"
-        - "deposits::list"
-        - "deposits::list_depositable_payments"
-        - "deposits::list_payments"
-        - "deposits::list_unvalidateds"
-        - "deposits::new"
-        - "deposits::show"
-        - "deposits::unvalidateds"
-        - "deposits::update"
-    - outgoing_payments:
-      - - "outgoing_payments::index"
-        - "outgoing_payment_uses::create"
-        - "outgoing_payment_uses::destroy"
-        - "outgoing_payment_uses::new"
-        - "outgoing_payments::create"
-        - "outgoing_payments::destroy"
-        - "outgoing_payments::edit"
-        - "outgoing_payments::list"
-        - "outgoing_payments::list_purchases"
-        - "outgoing_payments::new"
-        - "outgoing_payments::show"
-        - "outgoing_payments::update"
-    - parameters:
-      - - "incoming_payment_modes::index"
-        - "incoming_payment_modes::create"
-        - "incoming_payment_modes::destroy"
-        - "incoming_payment_modes::down"
-        - "incoming_payment_modes::edit"
-        - "incoming_payment_modes::list"
-        - "incoming_payment_modes::new"
-        - "incoming_payment_modes::reflect"
-        - "incoming_payment_modes::up"
-        - "incoming_payment_modes::update"
-      - - "outgoing_payment_modes::index"
-        - "outgoing_payment_modes::create"
-        - "outgoing_payment_modes::destroy"
-        - "outgoing_payment_modes::down"
-        - "outgoing_payment_modes::edit"
-        - "outgoing_payment_modes::list"
-        - "outgoing_payment_modes::new"
-        - "outgoing_payment_modes::up"
-        - "outgoing_payment_modes::update"
-      - - "taxes::index"
-        - "taxes::create"
-        - "taxes::destroy"
-        - "taxes::edit"
-        - "taxes::list"
-        - "taxes::new"
-        - "taxes::update"
   - sales:
     - sales:
       - - "sales::index"
@@ -353,36 +263,6 @@ menus:
         - "purchases::refuse"
         - "purchases::show"
         - "purchases::update"
-    - outgoing_deliveries:
-      - - "outgoing_deliveries::index"
-        - "outgoing_deliveries::create"
-        - "outgoing_deliveries::destroy"
-        - "outgoing_deliveries::edit"
-        - "outgoing_deliveries::list"
-        - "outgoing_deliveries::list_lines"
-        - "outgoing_deliveries::new"
-        - "outgoing_deliveries::show"
-        - "outgoing_deliveries::update"
-      - - "transports::index"
-        - "transports::create"
-        - "transports::destroy"
-        - "transports::edit"
-        - "transports::formize"
-        - "transports::list"
-        - "transports::list_deliveries"
-        - "transports::list_transportable_deliveries"
-        - "transports::new"
-        - "transports::show"
-        - "transports::update"
-    - incoming_deliveries:
-      - - "incoming_deliveries::index"
-        - "incoming_deliveries::confirm"
-        - "incoming_deliveries::create"
-        - "incoming_deliveries::destroy"
-        - "incoming_deliveries::edit"
-        - "incoming_deliveries::list"
-        - "incoming_deliveries::new"
-        - "incoming_deliveries::update"
   - stocks:
     - stocks:
       - - "stocks::index"
@@ -415,45 +295,37 @@ menus:
         - "inventories::reflect"
         - "inventories::show"
         - "inventories::update"
-    - products:
-      - - "products::index"
-        - "product_components::create"
-        - "product_components::destroy"
-        - "product_components::edit"
-        - "product_components::new"
-        - "product_components::update"
-        - "products::change_quantities"
-        - "products::create"
-        - "products::destroy"
-        - "products::edit"
-        - "products::list"
-        - "products::list_components"
-        - "products::list_prices"
-        - "products::list_stock_moves"
-        - "products::list_stocks"
-        - "products::new"
-        - "products::show"
-        - "products::update"
-      - - "product_categories::index"
-        - "product_categories::create"
-        - "product_categories::destroy"
-        - "product_categories::edit"
-        - "product_categories::list"
-        - "product_categories::list_products"
-        - "product_categories::new"
-        - "product_categories::show"
-        - "product_categories::update"
-      - - "prices::index"
-        - "prices::create"
-        - "prices::destroy"
-        - "prices::edit"
-        - "prices::export"
-        - "prices::find"
-        - "prices::import"
-        - "prices::list"
-        - "prices::new"
-        - "prices::update"
-    - parameters:
+    - outgoing_deliveries:
+      - - "outgoing_deliveries::index"
+        - "outgoing_deliveries::create"
+        - "outgoing_deliveries::destroy"
+        - "outgoing_deliveries::edit"
+        - "outgoing_deliveries::list"
+        - "outgoing_deliveries::list_lines"
+        - "outgoing_deliveries::new"
+        - "outgoing_deliveries::show"
+        - "outgoing_deliveries::update"
+      - - "transports::index"
+        - "transports::create"
+        - "transports::destroy"
+        - "transports::edit"
+        - "transports::formize"
+        - "transports::list"
+        - "transports::list_deliveries"
+        - "transports::list_transportable_deliveries"
+        - "transports::new"
+        - "transports::show"
+        - "transports::update"
+    - incoming_deliveries:
+      - - "incoming_deliveries::index"
+        - "incoming_deliveries::confirm"
+        - "incoming_deliveries::create"
+        - "incoming_deliveries::destroy"
+        - "incoming_deliveries::edit"
+        - "incoming_deliveries::list"
+        - "incoming_deliveries::new"
+        - "incoming_deliveries::update"
+    - warehouses:
       - - "warehouses::index"
         - "warehouses::create"
         - "warehouses::destroy"
@@ -464,44 +336,6 @@ menus:
         - "warehouses::new"
         - "warehouses::show"
         - "warehouses::update"
-      - - "incoming_delivery_modes::index"
-        - "incoming_delivery_modes::create"
-        - "incoming_delivery_modes::destroy"
-        - "incoming_delivery_modes::edit"
-        - "incoming_delivery_modes::list"
-        - "incoming_delivery_modes::new"
-        - "incoming_delivery_modes::update"
-      - - "outgoing_delivery_modes::index"
-        - "outgoing_delivery_modes::create"
-        - "outgoing_delivery_modes::destroy"
-        - "outgoing_delivery_modes::edit"
-        - "outgoing_delivery_modes::list"
-        - "outgoing_delivery_modes::new"
-        - "outgoing_delivery_modes::update"
-      - - "sale_natures::index"
-        - "sale_natures::create"
-        - "sale_natures::destroy"
-        - "sale_natures::edit"
-        - "sale_natures::list"
-        - "sale_natures::new"
-        - "sale_natures::show"
-        - "sale_natures::update"
-      - - "purchase_natures::index"
-        - "purchase_natures::create"
-        - "purchase_natures::destroy"
-        - "purchase_natures::edit"
-        - "purchase_natures::list"
-        - "purchase_natures::new"
-        - "purchase_natures::show"
-        - "purchase_natures::update"
-      - - "delays::index"
-        - "delays::create"
-        - "delays::destroy"
-        - "delays::edit"
-        - "delays::list"
-        - "delays::new"
-        - "delays::show"
-        - "delays::update"
   - production:
     - land_parcels:
       - - "land_parcels::index"
@@ -563,23 +397,6 @@ menus:
         - "production_chains::new"
         - "production_chains::show"
         - "production_chains::update"
-    - parameters:
-      - - "land_parcel_groups::index"
-        - "land_parcel_groups::create"
-        - "land_parcel_groups::destroy"
-        - "land_parcel_groups::edit"
-        - "land_parcel_groups::list"
-        - "land_parcel_groups::new"
-        - "land_parcel_groups::update"
-      - - "tools::index"
-        - "tools::create"
-        - "tools::destroy"
-        - "tools::edit"
-        - "tools::list"
-        - "tools::list_operations"
-        - "tools::new"
-        - "tools::show"
-        - "tools::update"
   # - settings:
   #   - my_account:
   #     - - "myselves::statistics"
@@ -744,3 +561,187 @@ menus:
   #       - "districts::list"
   #       - "districts::new"
   #       - "districts::update"
+    # - accounts:
+    #   - - "accounts::index"
+    #     - "accounts::create"
+    #     - "accounts::destroy"
+    #     - "accounts::edit"
+    #     - "accounts::list"
+    #     - "accounts::list_entities"
+    #     - "accounts::list_journal_entry_lines"
+    #     - "accounts::load"
+    #     - "accounts::new"
+    #     - "accounts::show"
+    #     - "accounts::update"
+    # - financial_years:
+    #   - - "financial_years::index"
+    #     - "financial_years::close"
+    #     - "financial_years::compute_balances"
+    #     - "financial_years::create"
+    #     - "financial_years::destroy"
+    #     - "financial_years::edit"
+    #     - "financial_years::list"
+    #     - "financial_years::list_account_balances"
+    #     - "financial_years::new"
+    #     - "financial_years::show"
+    #     - "financial_years::synthesis" # NONEXISTENT ACTION !!!
+    #     - "financial_years::update"
+    # - incoming_payments:
+    #   - - "incoming_payments::index"
+    #     - "incoming_payment_uses::create"
+    #     - "incoming_payment_uses::destroy"
+    #     - "incoming_payment_uses::new"
+    #     - "incoming_payments::create"
+    #     - "incoming_payments::destroy"
+    #     - "incoming_payments::edit"
+    #     - "incoming_payments::list"
+    #     - "incoming_payments::list_sales"
+    #     - "incoming_payments::new"
+    #     - "incoming_payments::show"
+    #     - "incoming_payments::update"
+    #   - - "deposits::index"
+    #     - "deposits::create"
+    #     - "deposits::destroy"
+    #     - "deposits::edit"
+    #     - "deposits::list"
+    #     - "deposits::list_depositable_payments"
+    #     - "deposits::list_payments"
+    #     - "deposits::list_unvalidateds"
+    #     - "deposits::new"
+    #     - "deposits::show"
+    #     - "deposits::unvalidateds"
+    #     - "deposits::update"
+    # - outgoing_payments:
+    #   - - "outgoing_payments::index"
+    #     - "outgoing_payment_uses::create"
+    #     - "outgoing_payment_uses::destroy"
+    #     - "outgoing_payment_uses::new"
+    #     - "outgoing_payments::create"
+    #     - "outgoing_payments::destroy"
+    #     - "outgoing_payments::edit"
+    #     - "outgoing_payments::list"
+    #     - "outgoing_payments::list_purchases"
+    #     - "outgoing_payments::new"
+    #     - "outgoing_payments::show"
+    #     - "outgoing_payments::update"
+    # - parameters:
+    #   - - "incoming_payment_modes::index"
+    #     - "incoming_payment_modes::create"
+    #     - "incoming_payment_modes::destroy"
+    #     - "incoming_payment_modes::down"
+    #     - "incoming_payment_modes::edit"
+    #     - "incoming_payment_modes::list"
+    #     - "incoming_payment_modes::new"
+    #     - "incoming_payment_modes::reflect"
+    #     - "incoming_payment_modes::up"
+    #     - "incoming_payment_modes::update"
+    #   - - "outgoing_payment_modes::index"
+    #     - "outgoing_payment_modes::create"
+    #     - "outgoing_payment_modes::destroy"
+    #     - "outgoing_payment_modes::down"
+    #     - "outgoing_payment_modes::edit"
+    #     - "outgoing_payment_modes::list"
+    #     - "outgoing_payment_modes::new"
+    #     - "outgoing_payment_modes::up"
+    #     - "outgoing_payment_modes::update"
+    #   - - "taxes::index"
+    #     - "taxes::create"
+    #     - "taxes::destroy"
+    #     - "taxes::edit"
+    #     - "taxes::list"
+    #     - "taxes::new"
+    #     - "taxes::update"
+    # - products:
+    #   - - "products::index"
+    #     - "product_components::create"
+    #     - "product_components::destroy"
+    #     - "product_components::edit"
+    #     - "product_components::new"
+    #     - "product_components::update"
+    #     - "products::change_quantities"
+    #     - "products::create"
+    #     - "products::destroy"
+    #     - "products::edit"
+    #     - "products::list"
+    #     - "products::list_components"
+    #     - "products::list_prices"
+    #     - "products::list_stock_moves"
+    #     - "products::list_stocks"
+    #     - "products::new"
+    #     - "products::show"
+    #     - "products::update"
+    #   - - "product_categories::index"
+    #     - "product_categories::create"
+    #     - "product_categories::destroy"
+    #     - "product_categories::edit"
+    #     - "product_categories::list"
+    #     - "product_categories::list_products"
+    #     - "product_categories::new"
+    #     - "product_categories::show"
+    #     - "product_categories::update"
+    #   - - "prices::index"
+    #     - "prices::create"
+    #     - "prices::destroy"
+    #     - "prices::edit"
+    #     - "prices::export"
+    #     - "prices::find"
+    #     - "prices::import"
+    #     - "prices::list"
+    #     - "prices::new"
+    #     - "prices::update"
+    # - parameters:
+    #   - - "incoming_delivery_modes::index"
+    #     - "incoming_delivery_modes::create"
+    #     - "incoming_delivery_modes::destroy"
+    #     - "incoming_delivery_modes::edit"
+    #     - "incoming_delivery_modes::list"
+    #     - "incoming_delivery_modes::new"
+    #     - "incoming_delivery_modes::update"
+    #   - - "outgoing_delivery_modes::index"
+    #     - "outgoing_delivery_modes::create"
+    #     - "outgoing_delivery_modes::destroy"
+    #     - "outgoing_delivery_modes::edit"
+    #     - "outgoing_delivery_modes::list"
+    #     - "outgoing_delivery_modes::new"
+    #     - "outgoing_delivery_modes::update"
+    #   - - "sale_natures::index"
+    #     - "sale_natures::create"
+    #     - "sale_natures::destroy"
+    #     - "sale_natures::edit"
+    #     - "sale_natures::list"
+    #     - "sale_natures::new"
+    #     - "sale_natures::show"
+    #     - "sale_natures::update"
+    #   - - "purchase_natures::index"
+    #     - "purchase_natures::create"
+    #     - "purchase_natures::destroy"
+    #     - "purchase_natures::edit"
+    #     - "purchase_natures::list"
+    #     - "purchase_natures::new"
+    #     - "purchase_natures::show"
+    #     - "purchase_natures::update"
+    #   - - "delays::index"
+    #     - "delays::create"
+    #     - "delays::destroy"
+    #     - "delays::edit"
+    #     - "delays::list"
+    #     - "delays::new"
+    #     - "delays::show"
+    #     - "delays::update"
+    # - parameters:
+    #   - - "land_parcel_groups::index"
+    #     - "land_parcel_groups::create"
+    #     - "land_parcel_groups::destroy"
+    #     - "land_parcel_groups::edit"
+    #     - "land_parcel_groups::list"
+    #     - "land_parcel_groups::new"
+    #     - "land_parcel_groups::update"
+    #   - - "tools::index"
+    #     - "tools::create"
+    #     - "tools::destroy"
+    #     - "tools::edit"
+    #     - "tools::list"
+    #     - "tools::list_operations"
+    #     - "tools::new"
+    #     - "tools::show"
+    #     - "tools::update"
