--- a/config/rights.yml
+++ b/config/rights.yml
@@ -1,5 +1,4 @@
 # Unused actions in rights
-#   - "financial_years::list_asset_depreciations"
 #   - "production_chain_conveyors::create"
 #   - "production_chain_conveyors::destroy"
 #   - "production_chain_conveyors::edit"
@@ -507,9 +506,11 @@ manage_financial_years:
   - "financial_years::create"
   - "financial_years::destroy"
   - "financial_years::edit"
+  - "financial_years::generate_last_journal_entry"
   - "financial_years::index"
   - "financial_years::list"
   - "financial_years::list_account_balances"
+  - "financial_years::list_asset_depreciations"
   - "financial_years::new"
   - "financial_years::show"
   - "financial_years::update"
