--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -76,3 +76,14 @@ accounts_002:
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
+accounts_003:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  is_debit: true
+  label: "681 - Tototo"
+  name: "Tototo"
+  number: "681"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
