--- a/test/fixtures/asset_depreciations.yml
+++ b/test/fixtures/asset_depreciations.yml
@@ -20,25 +20,27 @@
 # 
 # == Table: asset_depreciations
 #
-#  accountable       :boolean          not null
-#  accounted_at      :datetime         
-#  amount            :decimal(19, 4)   not null
-#  asset_id          :integer          not null
-#  company_id        :integer          not null
-#  created_at        :datetime         not null
-#  created_on        :date             not null
-#  creator_id        :integer          
-#  depreciation      :text             
-#  financial_year_id :integer          
-#  id                :integer          not null, primary key
-#  journal_entry_id  :integer          
-#  lock_version      :integer          default(0), not null
-#  position          :integer          
-#  protected         :boolean          not null
-#  started_on        :date             not null
-#  stopped_on        :date             not null
-#  updated_at        :datetime         not null
-#  updater_id        :integer          
+#  accountable        :boolean          not null
+#  accounted_at       :datetime         
+#  amount             :decimal(19, 4)   not null
+#  asset_amount       :decimal(19, 4)   
+#  asset_id           :integer          not null
+#  company_id         :integer          not null
+#  created_at         :datetime         not null
+#  created_on         :date             not null
+#  creator_id         :integer          
+#  depreciated_amount :decimal(19, 4)   
+#  depreciation       :text             
+#  financial_year_id  :integer          
+#  id                 :integer          not null, primary key
+#  journal_entry_id   :integer          
+#  lock_version       :integer          default(0), not null
+#  position           :integer          
+#  protected          :boolean          not null
+#  started_on         :date             not null
+#  stopped_on         :date             not null
+#  updated_at         :datetime         not null
+#  updater_id         :integer          
 #
 #
 # == Fixture: asset_depreciations
