Adds Listing in Thirds module

--- a/config/menus.yml
+++ b/config/menus.yml
@@ -110,6 +110,22 @@ menus:
         - "events::list"
         - "events::new"
         - "events::update"
+    - listings:
+      - - "listings::index"
+        - "listing_nodes::create"
+        - "listing_nodes::destroy"
+        - "listing_nodes::edit"
+        - "listing_nodes::new"
+        - "listing_nodes::update"
+        - "listings::create"
+        - "listings::destroy"
+        - "listings::duplicate"
+        - "listings::edit"
+        - "listings::extract"
+        - "listings::list"
+        - "listings::mail"
+        - "listings::new"
+        - "listings::update"
     - subscriptions:
       - - "subscriptions::index"
         - "subscriptions::coordinates"
@@ -423,21 +439,6 @@ menus:
   #     - - "settings::backups"
   #       - "settings::backup"
   #       - "settings::restore"
-  #     - - "listings::index"
-  #       - "listing_nodes::create"
-  #       - "listing_nodes::destroy"
-  #       - "listing_nodes::edit"
-  #       - "listing_nodes::new"
-  #       - "listing_nodes::update"
-  #       - "listings::create"
-  #       - "listings::destroy"
-  #       - "listings::duplicate"
-  #       - "listings::edit"
-  #       - "listings::extract"
-  #       - "listings::list"
-  #       - "listings::mail"
-  #       - "listings::new"
-  #       - "listings::update"
   #     - - "settings::import"
   #   - company:
   #     - - "establishments::index"
