--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -80,3 +80,16 @@ events_002:
   updated_at: 2006-07-19 19:13:59 +02:00
   updater_id: 1
       
+events_003:
+  entity_id: 1
+  nature_id: 1
+  started_at: <%=(t=Time.now-2.year).to_s(:db)%>
+  started_sec: <%=t.to_i%>
+  reason: Nothing too again
+  responsible_id: 1
+  id: 3
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  updated_at: 2006-07-19 19:13:59 +02:00
+  updater_id: 1
