--- a/installer/win32/build
+++ b/installer/win32/build
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 app=$1
 version=$2
 log=$3
@@ -9,9 +9,6 @@ release=${app}-${version}
 rm -fr packages
 mkdir -p packages
 
-
-
-
 if [ -n "`which makensis`" ]; then
     nsis_share=/usr/share/nsis
     if [ -e ${nsis_share}/Plugins/pwgen.dll ]; then
@@ -21,7 +18,18 @@ if [ -n "`which makensis`" ]; then
 	sudo cp *.nsh ${nsis_share}/Include
 	sudo cp *.dll ${nsis_share}/Plugins
     fi
-
+    
+    pushd ${app}
+    mv public public-link
+    mkdir public
+    cp -r public-link/* public/
+    rm public-link
+    ls -l
+    ls -l public
+    bundle install
+    rake assets:precompile RAILS_ENV=production
+    popd
+    
     files="files"
     rm -fr ${files}
     mkdir -p ${files}/apps
