--- a/installer/debian/build
+++ b/installer/debian/build
@@ -30,6 +30,7 @@ find copy -name "*~"  -print0 | xargs -0 rm -rf
 find copy -name "#*#" -print0 | xargs -0 rm -rf
 
 pushd copy
+echo "Rails.application.config.action_controller.relative_url_root = '/ekylibre'" > config/initializers/relative_url_root.rb
 bundle install --quiet
 rake assets:precompile RAILS_ENV=production
 popd
