--- a/installer/debian/build
+++ b/installer/debian/build
@@ -32,6 +32,9 @@ find copy -name "#*#" -print0 | xargs -0 rm -rf
 pushd copy
 echo "Rails.application.config.action_controller.relative_url_root = '/ekylibre'" > config/initializers/relative_url_root.rb
 bundle install --quiet
+echo "production:" > config/database.yml
+echo "  adapter: sqlite3" >> config/database.yml
+echo "  database: db/production.sqlite3" >> config/database.yml
 rake assets:precompile RAILS_ENV=production
 popd
 
